# ircd

./: .gitignore  .patches  BUGS  CAMBIOS2_10_H_03  CAMBIOS2_10_H_04  CAMBIOS2_10_H_06  CAMBIOS2_10_H_09  CAMBIOS2_10_H_10  CAMBIOS2_10_H_11  COPYING.es  ChangeLog  ChangeLog.07  ChangeLog.10  Doxyfile  GIT.txt  INSTALL  INSTALL.es  Makefile.am  Makefile.in  README.md  SVN.txt  acconfig.h  aclocal.m4  cfg-hispano-flash.sh  cfg-hispano-html.sh  cfg-hispano.sh  config.h.in  config.status  configurar.sh  configure  configure.ac  ircd-patch  lazyserver.jcea  tener_en_cuenta.jcea  todo.jcea
config/: .cvsignore  Makefile.in  README  acinclude.m4  aclocal.m4  config-sh.in  configure  configure.in  configuretool.in  gen.ircd.Makefile  setup.h.in
config/CVS/: Entries  Repository
doc/: Configure.help  Makefile.in  ddb.txt  ejemplo.conf  ircd.sample-en.conf  ircd.sample-es.conf  privs.txt
doc/CVS/: Entries  Repository
doc/en/: Authors  asll.txt  chroot.txt  crules.txt  cvs.txt  features.txt  freebsd.txt  gline.txt  iauth.txt  indent.txt  jupe.txt  log.txt  rfc1413.txt  snomask.txt  string.txt  who.txt  www.txt  xquery.txt
doc/en/api/: api.txt  events.txt  features.txt  gline.txt  ircd_snprintf.txt  joinbuf.txt  jupe.txt  log.txt  modebuf.txt  motd.txt  msgq.txt  privileges.txt  send.txt
doc/es/: asll.txt  chroot.txt  ddb.txt  iauth.txt
doc/history/CVS/: Entries  Repository
doc/history/irc-hispano/: CAMBIOS2_10_06  CAMBIOS2_10_07  CAMBIOS2_10_H_01  CAMBIOS2_10_H_02  CAMBIOS2_10_H_03  CAMBIOS2_10_H_04  CAMBIOS2_10_H_05  CAMBIOS2_10_H_06  CAMBIOS2_10_H_07  CAMBIOS2_10_H_08  CAMBIOS2_10_H_09  CAMBIOS2_10_H_10  todo.jcea
doc/history/undernet/: ChangeLog-u2.10.07  ChangeLog-u2.10.10  ChangeLog-u2.10.12
doc/tools/CVS/: Repository
include/: .gitignore  IPcheck.h  bsd.h  capab.h  channel.h  class.h  client.h  common.h  configold.h  crule.h  dbuf.h  ddb.h  destruct_event.h  fileio.h  flagset.h  geoip.h  gline.h  h.h  handlers.h  hash.h  ircd.h  ircd_alloc.h  ircd_chattr.h  ircd_crypt.h  ircd_crypt_native.h  ircd_crypt_plain.h  ircd_crypt_smd5.h  ircd_defs.h  ircd_events.h  ircd_features.h  ircd_handler.h  ircd_log.h  ircd_md5.h  ircd_osdep.h  ircd_pcre.h  ircd_relay.h  ircd_reply.h  ircd_reslib.h  ircd_signal.h  ircd_snprintf.h  (+57 more)
include/CVS/: Entries  Repository
ircd/: .gitignore  .s_user.c.swp  IPcheck.c  Makefile.am  Makefile.in  aes.c  aes256.c  bsd.c  channel.c  chkconf.c  class.c  client.c  common.c  convert-conf.c  crule.c  dbuf.c  ddb.c  ddb_db_native.c  ddb_db_persistent.c  ddb_db_template.c  ddb_events.c  destruct_event.c  engine_devpoll.c  engine_epoll.c  engine_kqueue.c  engine_poll.c  engine_select.c  fileio.c  geoip.c  gline.c  hash.c  ircd.c  ircd_alloc.c  ircd_crypt.c  ircd_crypt_native.c  ircd_crypt_plain.c  ircd_crypt_smd5.c  ircd_events.c  ircd_features.c  ircd_lexer.l  (+145 more)
ircd/CVS/: Entries  Repository
ircd/crypt/: .cvsignore  Makefile  mkpasswd.c
ircd/crypt/CVS/: Entries  Repository
ircd/crypt/tea/: Makefile  cifranick.c  ipreal.c  ipvirtual.c
ircd/crypt/tea/CVS/: Entries  Repository
ircd/crypt/tools/: Makefile  README  aes256.c  aes256.h  cifranick.c  cifraping.c  cifratexto.c  descifraping.c  descifratexto.c  ipreal.c  iptonumeric.c  ipvirtual.c  misc.c  misc.h  numerictoip.c  tea.c  tea.h
ircd/test/CVS/: Repository
libevent/: Makefile.am  Makefile.in  config.h.in  configure  configure.in
libs/libevent/: Makefile.am  Makefile.in  configure
libs/zlib/: .cvsignore  configure  deflate.h  zconf.in.h  zutil.h
libs/zlib/contrib/ada/CVS/: Repository
libs/zlib/contrib/blast/CVS/: Repository
libs/zlib/contrib/delphi/CVS/: Repository
libs/zlib/contrib/gzappend/CVS/: Root
libs/zlib/contrib/iostream2/CVS/: Repository
libs/zlib/contrib/iostream3/CVS/: Repository
libs/zlib/contrib/masm686/CVS/: Repository
libs/zlib/contrib/masmx86/CVS/: Repository
libs/zlib/contrib/pascal/CVS/: Repository
libs/zlib/contrib/testzlib/CVS/: Repository
libs/zlib/contrib/vstudio/vc7/CVS/: Repository
minilzo/CVS/: Repository
patches/: parches.txt
patches/diffs/: IPv6.diff  checkban.diff  deepspace.diff  deepspace.txt  hispano.diff  modoX-full.diff  support.diff
tools/CVS/: Repository
zlib/: ChangeLog  Makefile.in  adler32.c  compress.c  crc32.c  deflate.c  example.c  gzio.c  minigzip.c  trees.c  uncompr.c  zutil.c
zlib/CVS/: Entries  Repository
zlib/amiga/CVS/: Repository
zlib/as400/CVS/: Repository
zlib/contrib/CVS/: Repository
zlib/contrib/asm386/CVS/: Repository
zlib/contrib/asm586/CVS/: Repository
zlib/contrib/asm686/CVS/: Repository
zlib/contrib/delphi2/CVS/: Repository
zlib/contrib/gzappend/CVS/: Repository
zlib/contrib/infback9/CVS/: Repository
zlib/contrib/inflate86/CVS/: Repository
zlib/contrib/iostream/CVS/: Repository
zlib/contrib/minizip/CVS/: Repository
zlib/contrib/puff/CVS/: Repository
zlib/contrib/untgz/CVS/: Repository
zlib/contrib/vstudio/CVS/: Repository
zlib/msdos/CVS/: Repository
zlib/nt/CVS/: Repository
zlib/old/CVS/: Repository
zlib/old/os2/CVS/: Repository
zlib/os2/CVS/: Repository
zlib/qnx/CVS/: Repository
zlib/win32/CVS/: Repository
